--- a/Zoomcar/Base.lproj/Main.storyboard
+++ b/Zoomcar/Base.lproj/Main.storyboard
@@ -741,13 +741,16 @@
                                 <rect key="frame" x="214" y="310" width="277" height="148"/>
                                 <datePickerCell key="cell" state="on" borderStyle="bezel" alignment="left" datePickerStyle="clockAndCalendar" id="xVr-aj-QUh">
                                     <font key="font" metaFont="system"/>
-                                    <date key="date" timeIntervalSinceReferenceDate="583516800">
-                                        <!--2019-06-29 16:00:00 +0000-->
+                                    <date key="date" timeIntervalSinceReferenceDate="581270400">
+                                        <!--2019-06-03 16:00:00 +0000-->
                                     </date>
                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                     <datePickerElements key="datePickerElements" year="YES" month="YES" day="YES" hour="YES" minute="YES" second="YES"/>
                                 </datePickerCell>
+                                <connections>
+                                    <action selector="startDateClicked:" target="XfG-lQ-9wD" id="Wv0-QC-Cq0"/>
+                                </connections>
                             </datePicker>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="LmR-rH-Eca">
                                 <rect key="frame" x="85" y="251" width="71" height="19"/>
@@ -762,10 +765,10 @@
                             </textField>
                             <datePicker verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="sSV-UE-UMw">
                                 <rect key="frame" x="214" y="122" width="277" height="148"/>
-                                <datePickerCell key="cell" borderStyle="bezel" alignment="left" datePickerStyle="clockAndCalendar" id="aKy-Yp-Kb8">
+                                <datePickerCell key="cell" state="on" borderStyle="bezel" alignment="left" datePickerStyle="clockAndCalendar" id="aKy-Yp-Kb8">
                                     <font key="font" metaFont="system"/>
-                                    <date key="date" timeIntervalSinceReferenceDate="584726400">
-                                        <!--2019-07-13 16:00:00 +0000-->
+                                    <date key="date" timeIntervalSinceReferenceDate="632332800">
+                                        <!--2021-01-14 16:00:00 +0000-->
                                     </date>
                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                     <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -1914,7 +1917,7 @@
                                 <subviews>
                                     <popUpButton verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="gwt-Dw-mzl">
                                         <rect key="frame" x="58" y="16" width="88" height="25"/>
-                                        <popUpButtonCell key="cell" type="push" title="Chennai" bezelStyle="rounded" alignment="justified" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" selectedItem="8NY-Lt-Qa7" id="R40-UW-ye3">
+                                        <popUpButtonCell key="cell" type="push" title="Chennai" bezelStyle="rounded" alignment="center" lineBreakMode="truncatingTail" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" selectedItem="8NY-Lt-Qa7" id="R40-UW-ye3">
                                             <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                             <font key="font" metaFont="menu"/>
                                             <menu key="menu" id="m7Z-GP-C4w">
@@ -1927,7 +1930,7 @@
                                         </popUpButtonCell>
                                     </popUpButton>
                                     <datePicker verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="r47-KW-9Ny">
-                                        <rect key="frame" x="287" y="17" width="199" height="27"/>
+                                        <rect key="frame" x="312" y="17" width="199" height="27"/>
                                         <datePickerCell key="cell" borderStyle="bezel" alignment="left" id="Y1e-ef-5tf">
                                             <font key="font" size="14" name=".SFNSText"/>
                                             <date key="date" timeIntervalSinceReferenceDate="584640000">
@@ -1937,9 +1940,12 @@
                                             <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                                             <datePickerElements key="datePickerElements" year="YES" month="YES" day="YES" hour="YES" minute="YES" second="YES"/>
                                         </datePickerCell>
+                                        <connections>
+                                            <action selector="startDateClicked:" target="kM7-md-kS3" id="Web-U1-b8I"/>
+                                        </connections>
                                     </datePicker>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="GwY-sS-WSO">
-                                        <rect key="frame" x="198" y="19" width="76" height="19"/>
+                                        <rect key="frame" x="218" y="19" width="76" height="19"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" title="Start Date" id="kMW-FA-fSC">
                                             <font key="font" metaFont="systemMedium" size="15"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -1947,7 +1953,7 @@
                                         </textFieldCell>
                                     </textField>
                                     <datePicker verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="4pq-Ac-eON">
-                                        <rect key="frame" x="611" y="17" width="199" height="27"/>
+                                        <rect key="frame" x="667" y="17" width="199" height="27"/>
                                         <datePickerCell key="cell" borderStyle="bezel" alignment="left" id="Xkg-HG-5ly">
                                             <font key="font" size="14" name=".SFNSText"/>
                                             <date key="date" timeIntervalSinceReferenceDate="585331200">
@@ -1959,7 +1965,7 @@
                                         </datePickerCell>
                                     </datePicker>
                                     <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="0oi-o3-YT0">
-                                        <rect key="frame" x="530" y="19" width="68" height="19"/>
+                                        <rect key="frame" x="581" y="19" width="68" height="19"/>
                                         <textFieldCell key="cell" lineBreakMode="clipping" title="End Date" id="EQ4-IU-7fS">
                                             <font key="font" metaFont="systemMedium" size="15"/>
                                             <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -1967,17 +1973,17 @@
                                         </textFieldCell>
                                     </textField>
                                     <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Tsx-WE-htV">
-                                        <rect key="frame" x="871" y="12" width="102" height="32"/>
+                                        <rect key="frame" x="947" y="12" width="102" height="32"/>
                                         <buttonCell key="cell" type="push" title="Find Cars" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" sound="Bottle" inset="2" id="wLQ-1S-Ufb">
                                             <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                             <font key="font" metaFont="system" size="14"/>
                                         </buttonCell>
                                         <connections>
-                                            <action selector="findAvailableCars:" target="XfG-lQ-9wD" id="5C9-NU-gkk"/>
+                                            <action selector="findCars:" target="kM7-md-kS3" id="Ak3-rG-yOz"/>
                                         </connections>
                                     </button>
                                     <button translatesAutoresizingMaskIntoConstraints="NO" id="rHe-jy-Vca">
-                                        <rect key="frame" x="483" y="15" width="30" height="29"/>
+                                        <rect key="frame" x="508" y="15" width="30" height="29"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="29" id="K7s-IY-iBJ"/>
                                             <constraint firstAttribute="width" constant="30" id="T86-WH-D4X"/>
@@ -1991,7 +1997,7 @@
                                         </connections>
                                     </button>
                                     <button translatesAutoresizingMaskIntoConstraints="NO" id="bGM-nI-eeI">
-                                        <rect key="frame" x="807" y="15" width="30" height="29"/>
+                                        <rect key="frame" x="863" y="15" width="30" height="29"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="30" id="CLf-9C-obR"/>
                                             <constraint firstAttribute="height" constant="29" id="UB2-Zm-fOe"/>
@@ -2007,20 +2013,20 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="gwt-Dw-mzl" secondAttribute="trailing" constant="20" symbolic="YES" id="7d9-6R-LeD"/>
-                                    <constraint firstItem="4pq-Ac-eON" firstAttribute="leading" secondItem="0oi-o3-YT0" secondAttribute="trailing" constant="15" id="AvI-Kf-yA7"/>
+                                    <constraint firstItem="4pq-Ac-eON" firstAttribute="leading" secondItem="0oi-o3-YT0" secondAttribute="trailing" constant="20" id="AvI-Kf-yA7"/>
                                     <constraint firstItem="Tsx-WE-htV" firstAttribute="centerY" secondItem="4pq-Ac-eON" secondAttribute="centerY" constant="-1" id="DDX-hA-JGk"/>
-                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Tsx-WE-htV" secondAttribute="trailing" constant="20" symbolic="YES" id="G2m-6I-iDp"/>
+                                    <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Tsx-WE-htV" secondAttribute="trailing" constant="-150" id="G2m-6I-iDp"/>
                                     <constraint firstItem="rHe-jy-Vca" firstAttribute="centerY" secondItem="r47-KW-9Ny" secondAttribute="centerY" constant="-1" id="GYC-Qf-MaF"/>
                                     <constraint firstItem="0oi-o3-YT0" firstAttribute="centerY" secondItem="r47-KW-9Ny" secondAttribute="centerY" id="H7n-iZ-yHr"/>
                                     <constraint firstItem="4pq-Ac-eON" firstAttribute="centerY" secondItem="0oi-o3-YT0" secondAttribute="centerY" id="JTE-aj-vDj"/>
                                     <constraint firstItem="rHe-jy-Vca" firstAttribute="leading" secondItem="r47-KW-9Ny" secondAttribute="trailing" id="T2C-rJ-7tR"/>
-                                    <constraint firstItem="r47-KW-9Ny" firstAttribute="leading" secondItem="GwY-sS-WSO" secondAttribute="trailing" constant="15" id="XAX-LQ-JGb"/>
-                                    <constraint firstItem="Tsx-WE-htV" firstAttribute="leading" secondItem="4pq-Ac-eON" secondAttribute="trailing" constant="70" id="ZX1-ff-r5D"/>
+                                    <constraint firstItem="r47-KW-9Ny" firstAttribute="leading" secondItem="GwY-sS-WSO" secondAttribute="trailing" constant="20" id="XAX-LQ-JGb"/>
+                                    <constraint firstItem="Tsx-WE-htV" firstAttribute="leading" secondItem="4pq-Ac-eON" secondAttribute="trailing" constant="90" id="ZX1-ff-r5D"/>
                                     <constraint firstItem="r47-KW-9Ny" firstAttribute="centerY" secondItem="GwY-sS-WSO" secondAttribute="centerY" id="bRG-Zz-I1C"/>
                                     <constraint firstItem="gwt-Dw-mzl" firstAttribute="top" secondItem="OLk-mB-PiQ" secondAttribute="top" constant="20" id="c1L-e4-2XN"/>
-                                    <constraint firstItem="0oi-o3-YT0" firstAttribute="leading" secondItem="r47-KW-9Ny" secondAttribute="trailing" constant="49" id="fa1-7U-VDy"/>
+                                    <constraint firstItem="0oi-o3-YT0" firstAttribute="leading" secondItem="r47-KW-9Ny" secondAttribute="trailing" constant="75" id="fa1-7U-VDy"/>
                                     <constraint firstItem="bGM-nI-eeI" firstAttribute="centerY" secondItem="4pq-Ac-eON" secondAttribute="centerY" constant="-1" id="gRM-cb-ZAj"/>
-                                    <constraint firstItem="GwY-sS-WSO" firstAttribute="leading" secondItem="OLk-mB-PiQ" secondAttribute="leading" constant="200" id="iCa-MD-TOF"/>
+                                    <constraint firstItem="GwY-sS-WSO" firstAttribute="leading" secondItem="OLk-mB-PiQ" secondAttribute="leading" constant="220" id="iCa-MD-TOF"/>
                                     <constraint firstItem="GwY-sS-WSO" firstAttribute="centerY" secondItem="gwt-Dw-mzl" secondAttribute="centerY" constant="1" id="l6L-3B-RKs"/>
                                     <constraint firstItem="bGM-nI-eeI" firstAttribute="leading" secondItem="4pq-Ac-eON" secondAttribute="trailing" id="ye5-QI-2nB"/>
                                 </constraints>
